--- a/preamble.tex
+++ b/preamble.tex
@@ -158,12 +158,12 @@
 %disable
 %%option disable removes the notes
 ]{todonotes}
-\newcommand{\comment}[2][]{\todo[linecolor=gray,backgroundcolor=orange!30!,caption={}, #1]{#2}} % color-name! intensity ! 
-\newcommand{\alert}[2][]{\todo[linecolor=gray,backgroundcolor=red!50!,caption={}, #1]{#2}} % color-name! intensity ! 
+\newcommand{\comment}[2][]{\todo[linecolor=orange,backgroundcolor=orange!30!,caption={}, #1]{#2}} % color-name! intensity ! 
+\newcommand{\alert}[2][]{\todo[linecolor=red,backgroundcolor=red!50!,caption={}, #1]{#2}} % color-name! intensity ! 
 \newcommand{\details}[2][]{\todo[linecolor=cyan,backgroundcolor=cyan!40, caption={},#1]{#2}} 
 
-\newcommand{\emily}[2][]{\todo[linecolor=gray,backgroundcolor=green!30!,caption={}, #1]{#2}}
-\newcommand{\daniel}[2][]{\todo[linecolor=green,backgroundcolor=blue!30!,caption={}, #1]{#2}}  
+\newcommand{\emily}[2][]{\todo[linecolor=green,backgroundcolor=green!30!,caption={}, #1]{#2}}
+\newcommand{\daniel}[2][]{\todo[linecolor=blue,backgroundcolor=blue!30!,caption={}, #1]{#2}}  
 \newcommand{\pedro}[2][]{\todo[linecolor=nicegreen,backgroundcolor=nicegreen!70!,caption={}, #1]{#2}} 
 
 %editing
